# dirs-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  lin.rs  mac.rs  redox.rs  unix.rs  wasi.rs  wasm.rs  win.rs  xdg_basedir.rs
